--- a/src/app/list-poll/list-poll.component.scss
+++ b/src/app/list-poll/list-poll.component.scss
@@ -6,9 +6,9 @@
   // background-color: #fff;
   padding-bottom: 20px;
 }
-.action {
-  opacity: 0.7;
-}
+// .action {
+//   opacity: 0.7;
+// }
 
 .list {
   border-radius: 5px;
