--- a/src/app/detail-poll/detail-poll.component.html
+++ b/src/app/detail-poll/detail-poll.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
 
-          <div *ngIf="auth.isAuthenticated()" style="padding-left: 5px" class="mt-3 ml-1">
+          <div *ngIf="isAuthenticated" style="padding-left: 5px" class="mt-3 ml-1">
             <button *ngIf="!formStatus" (click)="displayTopicForm()" id="topicCreator" class="btn btn-primary">
               <span class="fa fa-plus"> add new option</span>
             </button>
