--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,19 +9,19 @@
         <span class="fa fa-home"> Home</span>
       </a>
     </li>
-    <li class="nav-item"><a class="nav-link" routerLink="/new" *ngIf="isAuthenticated()">Create Poll</a></li>
-    <li class="nav-item"><a class="nav-link" routerLink="/mypoll" *ngIf="isAuthenticated()">My polls</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/new" *ngIf="isAuthenticated">Create Poll</a></li>
+    <li class="nav-item"><a class="nav-link" routerLink="/mypoll" *ngIf="isAuthenticated">My polls</a></li>
     <li class="nav-item mr-5"><a class="nav-link" routerLink="/poll">Polls</a></li>
     <li class="nav-item">
-      <a class="nav-link log" (click)="auth.login()" *ngIf="!isAuthenticated()">
+      <a class="nav-link log" (click)="login()" *ngIf="!isAuthenticated">
         <span class="fa fa-sign-in"> Sign in </span>
       </a>
     </li>
-    <li class="nav-item" *ngIf="isAuthenticated()">
+    <li class="nav-item" *ngIf="isAuthenticated">
       <img src={{_avatar}} width="40" height="40" class="rounded-circle">
     </li>
     <li class="nav-item">
-      <a class="nav-link log" (click)="logout()" *ngIf="isAuthenticated()">
+      <a class="nav-link log" (click)="logout()" *ngIf="isAuthenticated">
         <span class="fa fa-sign-out">Logout</span>
       </a>
     </li>
