--- a/src/app/detail-poll/detail-poll.component.html
+++ b/src/app/detail-poll/detail-poll.component.html
@@ -5,7 +5,7 @@
     <h1 class="text-center">{{poll.title}}</h1>
   </div>
 
-<div class="card-group mt-5 mb-5">
+  <div class="card-group mt-5 mb-5">
 
     <!-- Voting Box -->
     <section class="card">
@@ -22,7 +22,7 @@
             </div>
           </div>
 
-          <div *ngIf="isAuthenticated" style="padding-left: 5px" class="mt-3 ml-1">
+          <div *ngIf="auth.isAuthenticated()" style="padding-left: 5px" class="mt-3 ml-1">
             <button *ngIf="!formStatus" (click)="displayTopicForm()" id="topicCreator" class="btn btn-primary">
               <span class="fa fa-plus"> add new option</span>
             </button>
@@ -32,7 +32,6 @@
               <button (click)="cancelTopic()" class="btn btn-secondary">cancel</button>
             </div>
           </div>
-
       </div>
     </section>
 
@@ -47,11 +46,8 @@
           [data]="barChartData"
           [options]="barOption"
           [width]="500">
-
         </google-chart>
       </div>
     </section>
-
-</div>
-
+  </div>
 </div>
