--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
     <li class="nav-item"><a class="nav-link" routerLink="/mypoll" *ngIf="auth.isAuthenticated()">My polls</a></li>
     <li class="nav-item mr-5"><a class="nav-link" routerLink="/poll">Polls</a></li>
     <li class="nav-item">
-      <a class="nav-link log" (click)="login()" *ngIf="!auth.isAuthenticated()">
+      <a class="nav-link log" (click)="auth.login()" *ngIf="!auth.isAuthenticated()">
         <span class="fa fa-sign-in"> Sign in </span>
       </a>
     </li>
