--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/bootstrap-social/bootstrap-social.css";
+// .active {
+//   background-color: #5f9ea0;
+// }
 
+// html, body {
+//   height: 100%;
+//   margin: 0;
+// }
+
+body {
+  background-color: red;
+}
 
