--- a/src/app/add-poll/add-poll.component.scss
+++ b/src/app/add-poll/add-poll.component.scss
@@ -1,5 +1,10 @@
+#background {
+  min-height: calc(100vh - 70px);
+  padding: 10px;
+}
 .container {
-  background-color: lightgray;
+  height: 400px;
+  background-color: #9999a2;
   padding: 20px;
   border-radius: 5px;
   h1 {
@@ -8,5 +13,21 @@
   label {
     color: white;
     font-size: 1.2em;
+  }
+
+}
+
+@media (max-width: 991px) {
+  .container {
+    height: 500px;
+  }
+  .newTopicButton {
+    margin-left: 0;
+  }
+  #topicCreator {
+    width: 100%
+  }
+  #submitButton {
+    width: 100%
   }
 }
