--- a/src/app/detail-poll/detail-poll.component.scss
+++ b/src/app/detail-poll/detail-poll.component.scss
@@ -1,4 +1,28 @@
+#background {
+  background-color: lightgray;
+  min-height: calc(100vh - 70px);
+  padding: 10px;
+}
 
+.container {
+}
+
+#voteContainer {
+  width: 100%;
+}
+.voteTextHeader {
+  height: 40px;
+  width: 100%;
+  color: white;
+}
+#voteTextContainer {
+  background-color: #fff;
+  padding: 0
+}
+#voteTextContent {
+  height: 250px;
+  overflow-y: scroll;
+}
 .voteLine {
   background-color: white;
   border: solid silver 1px;
@@ -6,25 +30,43 @@
   padding-top: 5px;
   padding-bottom: 2px;
 }
-#voteText {
+.voteText {
   font-size: 1.2em;
 }
 
-.card {
-  background-color: #f5f5f5;
-  height: 400px;
-}
-.card-header {
-  background-color: #ACA9BB;
-  color: white;
-}
-.charContainer {
-  // background-color: green;
-  padding: 2%;
+#optionInput {
+  width: 70%
 }
 
+/* *************** MEDIA QUERIES ******************/
 
+@media (max-width: 767px) {
 
+  .voteButton {
+    display: block;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  .voteText {
+    font-size: 1.1em;
+    text-align: center;
+  }
+  #voteChartContainer {
+    margin-top: 30px;
+  }
+
+  #optionInput {
+    width: 50%
+  }
+  #voteTextContent {
+    height: 350px;
+    overflow-y: scroll;
+  }
+  #topicCreator {
+    margin-bottom: 10px;
+    width: 90%
+  }
+}
 
 
 
