--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,16 +1,20 @@
 <footer>
-  <div class="row footer">
-    <div class="col-6 text-center"><p id="developper">Developped by @nnoux</p></div>
-    <div class="col-6 row">
-      <p>Contact me on <a href="https://twitter.com/yapanss" target="_blank">
-        <span class="social">Twitter</span>
-        <span class="fa fa-twitter fa-2x"></span>
-      </a> or
-        <a href="https://github.com/yapanss" target="_blank">
-          <span class="social">Github</span>
-          <span class="fa fa-github fa-2x"></span>
-      </a>
-      </p>
+<div class="container">
+  <div class="row">
+
+    <div class="col-md-6 col-sm-12 text-left">
+      <p id="developper">Developped by @nnoux, Maths teacher and Web Developper</p>
+    </div><!-- delopper -->
+    <div class="col-md-6 col-sm-12 row">
+      <p class="col-md-3" id="followMe">Follow me :</p>
+      <a href="https://twitter.com/yapanss" target="_blank" class="col-md-3 col-sm-4 link"><span class="socialLabel">twitter</span> <span class="fa fa-twitter text-info socialIcon"></span></a>
+      <a href="https://github.com/yapanss" target="_blank" class="col-md-3 col-sm-4 link"><span class="socialLabel">Github</span> <span class="fa fa-github socialIcon"></span></a>
+      <a href="https://codepen.io/yapanss" target="_blank" class="col-md-3 col-sm-4 link"><span class="socialLabel">Codepen</span><span class="fa fa-codepen socialIcon"></span></a>
     </div>
-  </div>
+
+
+  </div><!-- row footer -->
+</div> <!-- container -->
 </footer>
+
+
