--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -1,30 +1,49 @@
 footer {
   width: 100%;
-  height: 100px;
   background-color: #696969;
   color: white;
   padding-top: 15px;
   padding-bottom: 15px;
-  position: relative;
-  bottom: 0
-  a:hover {
-    text-decoration: none;
-  }
-  #developper {
-    padding-top: 10px;
-  }
-
+  height: 80px;
 }
+
 .fa-github {
   color: black;
 }
-
-p {
-  font-size: 1.2em;
-}
-.social {
+.fa-codepen {
   color: white;
-  font-size: 1.2em;
-  margin-left: 10px;
-  margin-right: 10px
+}
+.fa-twitter {
+}
+.socialIcon {
+  margin-left: 2%;
+}
+
+#followMe {
+    text-align: right;
+}
+.link {
+  text-decoration: none;
+  color: white;
+}
+/** ****************** MEDIA QUERIES ***************/
+
+@media (max-width: 767px) {
+  footer {
+    height: 125px;
+    p {
+      font-size: 0.9em;
+      text-align: center
+    }
+  }
+  #followMe, .socialLabel {
+    display: none;
+  }
+  .socialIcon {
+    font-size: 48px;
+    margin-left: 0;
+  }
+  .link {
+    text-align: center;
+  }
 }
