--- a/src/app/list-poll/list-poll.component.scss
+++ b/src/app/list-poll/list-poll.component.scss
@@ -1,35 +1,67 @@
 #background {
   background-color: lightgray;
   padding: 10px;
+  min-height: calc(100vh - 70px);
 }
 .container {
   // background-color: #fff;
   padding-bottom: 20px;
 }
-// .action {
-//   opacity: 0.7;
-// }
 
-.list {
-  border-radius: 5px;
-  background-color: #fff;
-  border-color: #000;
-  padding: 10px;
-}
-
-.listItem {
+#overlayParent {
+  position: relative;
+  padding: 5%;
+  border-radius: 3px;
+  background-color: white;
+  height: 80px;
   cursor: pointer;
-
 }
 
-.actionContainer {
-  border-top: solid 1px lightgray;
-  padding-top: 10px;
+span.fa-share span.fa-trash span.fa-chevron-right {
+  font-size: 0.3em;
+}
+.overlays {
+  display: none;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 15px;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  padding: 20px 10px 10px 10px;
+  background-color: rgba(0,0,0,0.4);
+  z-index: 2;
+}
+
+button.action, a.action {
+  width: 70%;
+  border-radius: 0;
+  margin-bottom: 0;
+  background-color: white;
+  opacity: 0.7
+}
+
+button.action:hover, a.action:hover {
+  span {
+    color: white;
+  }
+}
+
+a.action:hover {
+  background-color: #17A2B8;
+}
+
+#trash:hover {
+  background-color: red;
+}
+
+#chevron:hover {
+  background-color: #28A745;
 }
 
 #addPoll {
-  background-color: #708090;
-  color: white;
+
 }
 
 
